# Synthetic-DataGenerator-and-Evaluator

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/dataset/: versions.json
artifacts/dataset/v1/: dataset.jsonl  dataset_card.md  run_manifest.json
artifacts/eval/: eval_summary.md
artifacts/eval/v1/: eval_manifest.json  eval_summary.md
artifacts/source/: tos_parsed.txt
config/: pipeline.yaml  taxonomy.yaml
docs/: CHANGELOG.md  PROCESS.md  runbook-evaluate.md  runbook-generate.md  setup.md
src/razorpay_qa/: __init__.py  cli.py  evaluation.py  generation.py
src/razorpay_qa/utils/: config.py  curate.py  guardrails.py  ingest.py  llm.py  schema.py  seeds.py
tests/: conftest.py  test_eval.py  test_generate.py
