[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "razorpay-qa"
version = "0.1.0"
description = "Synthetic Q&A dataset pipeline for a Razorpay ToS compliance assistant"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hyde AI Builder Assessment" }]
dependencies = [
    "pydantic>=2.5",
    "pypdf>=4.0",
    "pyyaml>=6.0",
    "deepeval>=4.0",
    "anthropic>=0.34",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
]

[project.scripts]
razorpay-qa = "razorpay_qa.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
